--- a/app.css
+++ b/app.css
@@ -153,3 +153,9 @@ hr{
     padding-inline-start: 0px;
 }
 
+@media (max-width: 600px){
+    .list-item-inline{
+        padding-left: 0.2rem;
+        padding-right: 0.2rem;
+    }
+}
